[package]
name = "kvstoreserver2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde_json = "1.0.111"